--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -18,12 +18,21 @@
             android:orientation="vertical"
             android:layout_margin="10dp"
             tools:ignore="UselessParent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:text="Configuration Utility"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/device_search_view"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_weight="0.9"
+                android:layout_height="0dp">
             <Button
                 android:id="@+id/search_now"
                 android:textColor="@android:color/white"
@@ -43,7 +52,8 @@
                 android:visibility="gone"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_weight="0.9"
+                android:layout_height="0dp">
             <TextView
                 android:text="Device Id"
                 android:layout_width="match_parent"
