--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -50,6 +50,20 @@
                 android:layout_height="0dp"/>
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/console_output"
+                android:visibility="gone"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_weight="0.9"
+                android:layout_height="0dp">
+                <ListView
+                    android:id="@+id/console_output_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                </ListView>
+            </LinearLayout>
+            <LinearLayout
                 android:id="@+id/device_editor"
                 android:visibility="gone"
                 android:orientation="vertical"
