--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,16 @@
         android:title="Open Profile"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_write_firmware"
+        android:orderInCategory="100"
+        android:title="Write Firmware"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_show_console"
+        android:orderInCategory="100"
+        android:title="Show Console Output"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_profile_save"
         android:orderInCategory="100"
         android:title="Save Profile"
